style/elegance.css
/* ... */
/* Fix for ordered and unordered list in course topic summary & course weekly summary */

.course-content ul.weeks .content .summary ul,
.course-content ul.topics .content .summary ul {list-style: disc outside none;}

.course-content ul.weeks .content .summary ol,
.course-content ul.topics .content .summary ol {list-style: decimal outside none;}

.entrybox ul,
.entrybox ol { 
	margin-left: 20px;
	list-style-type:none;
}

.entrybox li:before {    
	font-family: 'FontAwesome';
	content: '\f0da';
	margin:0 5px 0 -15px;
	color: [[setting:themecolor]];
}

.course-content ul.topics li.section .right .hide {
	display: block !important;
}

/* @group Course Footer */

div.section-navigation.navigationtitle .mdl-left,
div.section-navigation.navigationtitle .mdl-right{
	display: none !important;
}

.single-section h3.sectionname {
	text-align: left;
	font-family: "Roboto";
	font-weight: 400;
	color: [[setting:themecolor]];
	margin-left: 40px;
	padding-bottom: 8px;
	border-bottom: 1px dotted #eee;
}
#section_footer {
	padding:5px 0px;
	color: [[setting:themecolor]];
	line-height:1.5; 
	clear:both;
	margin-top: -20px;
}

#section_footer a{
	font-style:normal;
	text-decoration:none;
}

#next_section {
	text-align:right;
	font-weight: 300;
	display: inline-block;
	float: right;
}

#previous_section {
	font-weight: 300;
	float: left;
}

.nav_guide { 
letter-spacing:0.1em;
	text-transform:uppercase;
	font-style:normal;
	color: [[setting:headingcolor]];
}
.nav_icon {
	color: [[setting:themecolor]];
	padding:0.3em;
	text-align:center;
}

.nav_icon:hover {
	color: [[setting:fontcolor]];
}

#next_section .nav_icon {
	margin-left:0.3em;
	border-left:1px solid #eee;
	font-size:2em;
	width: 50px;
	float: right;
}

#next_section .text{
	width:74.05%;
}

#previous_section .nav_icon {
	float:left;
	margin-right:0.3em;
	border-right:1px solid #eee;
	font-size:2em;
}

#previous_section .text{
	width:74.05%;
	float:lef;
}

/* @end */


/* @end */

/* @group Nprogress */

#nprogress {
  pointer-events: none;
  -webkit-pointer-events: none;
}

#nprogress .bar {
	background: #29d;
	z-index: 4000;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 2px;
}

/* Fancy blur effect */
#nprogress .peg {
	display: block;
	position: absolute;
	z-index: 400;
	width: 100px;
	height: 100%;
	box-shadow: 0 0 10px #29d, 0 0 5px #29d;
	opacity: 1.0;
	-webkit-transform: rotate(3deg) translate(0px, -4px);
	-moz-transform: rotate(3deg) translate(0px, -4px);
	-ms-transform: rotate(3deg) translate(0px, -4px);
	-o-transform: rotate(3deg) translate(0px, -4px);
	transform: rotate(3deg) translate(0px, -4px);
}

/* Remove these to get rid of the spinner */
#nprogress .spinner {
	display: block;
	position: fixed;
	z-index: 100;
	z-index: 4000;
	top: 15px;
	right: 15px;
}

#nprogress .spinner-icon {
	width: 14px;
	height: 14px;
	z-index: 4000;
	border:  solid 2px transparent;
	border-top-color:  #29d;
	border-left-color: #29d;
	border-radius: 10px;
	-webkit-animation: nprogress-spinner 400ms linear infinite;
	-moz-animation:    nprogress-spinner 400ms linear infinite;
	-ms-animation:     nprogress-spinner 400ms linear infinite;
	-o-animation:      nprogress-spinner 400ms linear infinite;
	animation:         nprogress-spinner 400ms linear infinite;
}

@-webkit-keyframes nprogress-spinner {
  0%   { -webkit-transform: rotate(0deg);   transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); }
}
@-moz-keyframes nprogress-spinner {
  0%   { -moz-transform: rotate(0deg);   transform: rotate(0deg); }
  100% { -moz-transform: rotate(360deg); transform: rotate(360deg); }
}
@-o-keyframes nprogress-spinner {
  0%   { -o-transform: rotate(0deg);   transform: rotate(0deg); }
  100% { -o-transform: rotate(360deg); transform: rotate(360deg); }
}
@-ms-keyframes nprogress-spinner {
  0%   { -ms-transform: rotate(0deg);   transform: rotate(0deg); }
  100% { -ms-transform: rotate(360deg); transform: rotate(360deg); }
}
@keyframes nprogress-spinner {
  0%   { transform: rotate(0deg);   transform: rotate(0deg); }
  100% { transform: rotate(360deg); transform: rotate(360deg); }
}


/* @end */

/* @group Media Calls */

@media only screen and (max-width: 979px){
	embed[type="application/x-shockwave-flash"] {
    	position: absolute;
    	left: -10000px;
    	margin-bottom: -40px;
	}
}

@media (max-width: 979px){
	.loginbox {
		margin: 40px 0 0 0;
	}
}

@media (max-width: 979px) and (min-width: 768px){
	.navbar-fixed-top {
		margin-bottom: 20px;
		padding-bottom: 0px;
		height: 53px;
	}
}

@media (min-width: 768px){
	.row-fluid .desktop-first-column {
		margin-right: 0;
		height: 100%;
		display: block;
	}
}

@media (max-width: 979px){
	body {
		padding-top: 0;
		margin-top: 0;
	}
}

@media (max-width: 767px){
	.container-fluid {
	padding: 0 0px;
	}
}


@media (max-width: 767px){
	#page{
		margin-top: 75px;
	}
}

@media (max-width: 979px){
	html.login-page #page{
		padding: 0 20px;
	}
}

@media (max-width: 767px){
	.course-content .single-section .section-navigation .mdl-left, .course-content .single-section .section-navigation .mdl-right {
		float: none;
		margin-right: 0;
		margin-left: 0;
		margin-bottom: 20px;
		position: relative;
		font-weight: normal;
		width: 100%;
		padding-left: 0;
		padding-right: 0;
	}
}

@media (max-width: 768px){
	.course-content .single-section .section-navigation {
		display: block;
		float: none;
		padding: 0;
		margin-bottom: 0;
	}
}

@media (max-width: 979px){
	.brand{
		text-align: center;
		position: relative;
		float: left;
		margin: 0 auto;
		width: 100%;
	}
	
	.navbar .nav{
		display: none;
	}
}

@media (max-width: 767px){
	#page-header{
		display: none;
	}
}

@media screen and (max-width: 55em) {

	.container > header h1,
	.container > header nav {
		float: none;
	}

	.container > header > span,
	.container > header h1 {
		text-align: center;
	}

	.container > header nav {
		margin: 0 auto;
	}

	.container > header > span {
		text-indent: 30px;
	}
}
/* ... */

